--- a/chat_rooms/chat_rooms.csproj
+++ b/chat_rooms/chat_rooms.csproj
@@ -228,6 +228,8 @@
     <Content Include="chat\TwitterEmoji.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="database\Chat_Room.mdf" />
+    <Content Include="database\Chat_Room_log.ldf" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
